<resources>
    <string name="app_name">My Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">회원가입</string>
    <string name="login">로그인</string>
    <string name="resetPW">비밀번호 재설정</string>
    <string name="student">학생</string>
    <string name="prof">교수</string>
    <string name="employee">교직원</string>
    <string name="BDayDP">생년월일을 선택하세요</string>
    <string name="memberType">회원 유형 선택</string>
    <string name="contractAgrmt">최종 사용권 계약서(EULA) 동의</string>
    <string name="infoAgrmt">개인정보 수집 및 처리 방침 동의</string>
    <string name="sendMail">비밀번호 재설정 메일 발송</string>
    <string name="pwResetXplxn">아래 필드에 가입한 e-Mail을 입력하면 비밀번호 재설정 링크를 발송해드립니다.</string>
    <string name="email">e-Mail</string>
    <string name="PW">비밀번호</string>
    <string name="checkPW">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="phoneNo">휴대폰 번호</string>
    <string name="BDay">생년월일</string>
    <string name="choose">선택</string>
    <string name="confirm">확인</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="read">읽기</string>
</resources>